syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/abdulkarimogaji/go-chat/pb";

message Room {
  int32 id = 1;
  int32 user_id = 2;
  int32 other_user_id = 3;
  string room_name = 4;
  RoomStatus status = 5;
  int32 last_chat_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}


enum RoomStatus {
  INACTIVE = 0;
  ACTIVE = 1;
}