syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/abdulkarimogaji/go-chat/pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
}